# music-library-tui

./: Cargo.toml
src/: api.rs  app.rs  main.rs  mpv.rs  settings.rs
