[package]
name = "music-lib-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "music-lib-tui"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.27"
ratatui = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
