[package]
name = "mutui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mutui"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
ureq = { version = "3", features = ["json"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
